# MultiThreading1

./: CMakeLists.txt  README.md  main  main.cpp  ncursesExample  ncursesExample.cpp  skillingNCurses.cpp
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  p1  p1.cbp
_release/: CMakeCache.txt  Makefile  cmake_install.cmake  p1.cbp
fork/: Fork.cpp  Fork.h
philosopher/: Philosopher.cpp  Philosopher.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake  p1.cbp
